[package]
name = "omega"
version = "0.1.0"
edition = "2024"

[dependencies]
skia-safe = { version = "0.87", features = ["gl"] }
winit = "0.30"           # Window creation
glow = "0.16"            # OpenGL bindings
anyhow = "1.0"           # Error handling
once_cell = "1.21"
slotmap = "1.0"

pollster = "0.3"

env_logger = "0.10"
softbuffer = "0.4"  # Simple CPU-based rendering